# TurnBasedBattleCpp

./: CMakeLists.txt  Makefile  README.md  tags
include/: Battle.h  Blob.h  Combatant.h  Game.h  NPC_Friendly.h  Npc_Enemy.h  Player.h  Spell.h  Spell_PoisonCloud.h  TurnEffect.h
src/: Battle.cpp  Blob.cpp  Combatant.cpp  NPC_Friendly.cpp  Player.cpp  Spell_PoisonCloud.cpp  TurnEffect.cpp  TurnEffect_Defend.cpp  TurnEffect_Poison.cpp  main.cpp
src/turn_based_battle/: Battle.h  Game.cpp  Game.h  stdafx.cpp  stdafx.h
src/turn_based_battle/Combatants/: Combatant.cpp  Combatant.h  Player.cpp
src/turn_based_battle/Combatants/Npc_Enemies/: Blob.cpp  Npc_Enemy.cpp  Npc_Enemy.h
src/turn_based_battle/Combatants/Npc_Friendlies/: NPC_Friendly.h
src/turn_based_battle/Spells/: Spell.cpp  Spell.h  Spell_PoisonCloud.cpp
src/turn_based_battle/TurnEffects/: TurnEffect.h  TurnEffect_Defend.h  TurnEffect_Poison.cpp  TurnEffect_Poison.h
